# VoiceStudio

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  attention_sink.ipynb  dataset_test.ipynb  debug_model_structure_Mingwan.py  eval.ipynb  eval_legacy.ipynb  evaluate.py  evaluation.py  example_dual.ipynb  example_qwen.ipynb  experiment.ipynb  experiment_parler.ipynb  experiment_qwen.ipynb  experiment_qwen_legacy.ipynb  experiment_qwen_legacy_ori.ipynb  experiment_qwen_v2.ipynb  model_zoo.ipynb  pyproject.toml  run_exp.py  synthesize.py  training_notebook_Mingwan.ipynb  verify_mixed_anchor.py
config/: __init__.py  synthesis_config.py
configs/: default_config.json
data/: libritts_p_curated_train_clean_100.csv
datasets/: __init__.py  ljspeech.py
examples/: basic_usage.py
metrics/: __init__.py  base.py  ffe.py  mcd.py  sim.py  utmos.py  wer.py
models/: __init__.py  base.py  dia_tts.py  parler_tts.py  xtts.py
spk_incon/datasets/: __init__.py  libritts_p3.py  libritts_p_custom.py
spk_incon/metrics/: __init__.py  base.py  ffe.py  mcd.py  sim.py  utmos.py  wer.py
spk_incon/metrics/presets/: synthesis_config.py
spk_incon/metrics/strategies/: method1.py  method2.py  method3.py
spk_incon/utils/: __init__.py  evaluate.py
src/t2a_lora/: __init__.py  cli.py
src/t2a_lora/generation/: __init__.py
src/t2a_lora/models/: __init__.py  hypernetwork.py  multimodal_encoder.py
src/t2a_lora/training/: __init__.py  config.py
src_Mingwan/: config.py
src_Mingwan/models/: tts_lora.py
src_Mingwan/training/: trainer.py
strategies/: __init__.py  base.py  method1.py  method2.py
t2a_lora/: __init__.py
tests/: __init__.py
utils/: __init__.py
voicestudio/components/clap/: __init__.py
voicestudio/components/style_anchor/: __init__.py
voicestudio/datasets/: __init__.py  libritts_p3.py  libritts_p_custom.py
voicestudio/metrics/: base.py  ffe.py  mcd.py  sim.py  utmos.py  wer.py
voicestudio/metrics/presets/: synthesis_config.py
voicestudio/metrics/strategies/: __init__.py  base.py  method2.py  method3.py
voicestudio/models/chroma/: configuration_chroma.py
voicestudio/models/integrations/: dia_tts.py  higgs_v2.py  parler_tts.py
voicestudio/models/parler_tts/: __init__.py  configuration_parler_tts.py  modeling_parler_tts.py
voicestudio/models/qwen3_tts/: configuration_qwen3_tts.py  modeling_qwen3_tts.py  processing_qwen3_tts.py
voicestudio/models/selective_tuner/: configuration_selective_tuner.py  modeling_selective_tuner.py
voicestudio/models/spark_tts/: modeling_spark_tts.py
voicestudio/resources/: index.html
voicestudio/utils/: audio_utils.py  evaluate.py
